@@ -1,7 +1,10 @@
 Unreleased
 ----------
 
-- ...
+- Added 'X-Postoffice: Bounced' header to outgoing bounce and quarantine
+  messages. The presence of this header is checked when importing messages and
+  any messages which contain it are discarded. This is to prevent possible
+  ricochets of bounce messages back into the system. (LP #612587)
 
 0.4 (2010-07-30)
 ----------------
